tests/snapshots/snapshot_schemas__ir_usage_schema.snap
---
source: tests/snapshot_schemas.rs
expression: "serde_json::to_string_pretty(&schema).unwrap()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "IrUsage",
  "description": "Normalized token-usage counters across all dialects.",
  "type": "object",
  "properties": {
    "cache_read_tokens": {
      "description": "Tokens served from a KV-cache read.",
      "type": "integer",
      "format": "uint64",
      "minimum": 0
    },
    "cache_write_tokens": {
      "description": "Tokens written into a KV-cache.",
      "type": "integer",
      "format": "uint64",
      "minimum": 0
    },
    "input_tokens": {
      "description": "Number of input (prompt) tokens.",
      "type": "integer",
      "format": "uint64",
      "minimum": 0
    },
    "output_tokens": {
      "description": "Number of output (completion) tokens.",
      "type": "integer",
      "format": "uint64",
      "minimum": 0
    },
    "total_tokens": {
      "description": "Sum of input + output tokens.",
      "type": "integer",
      "format": "uint64",
      "minimum": 0
    }
  },
  "required": [
    "input_tokens",
    "output_tokens",
    "total_tokens",
    "cache_read_tokens",
    "cache_write_tokens"
  ]
}
