tests/snapshots/snapshot_schemas__work_order_schema.snap
---
source: tests/snapshot_schemas.rs
expression: "serde_json::to_string_pretty(&schema).unwrap()"
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "WorkOrder",
  "description": "A single unit of work.\n\nThis is intentionally *not* a chat session. Sessions can exist underneath,\nbut the contract is step-oriented.\n\n# Examples\n\n```\nuse abp_core::WorkOrderBuilder;\n\nlet wo = WorkOrderBuilder::new(\"Refactor auth module\").build();\nassert_eq!(wo.task, \"Refactor auth module\");\n```",
  "type": "object",
  "properties": {
    "config": {
      "description": "Runtime-level knobs (model, budget, vendor flags).",
      "$ref": "#/$defs/RuntimeConfig"
    },
    "context": {
      "description": "Pre-loaded context files and snippets.",
      "$ref": "#/$defs/ContextPacket"
    },
    "id": {
      "description": "Unique identifier for this work order.",
      "type": "string",
      "format": "uuid"
    },
    "lane": {
      "description": "Strategy for how the agent produces output.",
      "$ref": "#/$defs/ExecutionLane"
    },
    "policy": {
      "description": "Security policy (tool/path restrictions).",
      "$ref": "#/$defs/PolicyProfile"
    },
    "requirements": {
      "description": "Capability requirements the backend must satisfy.",
      "$ref": "#/$defs/CapabilityRequirements"
    },
    "task": {
      "description": "Human intent.",
      "type": "string"
    },
    "workspace": {
      "description": "Workspace root, staging mode, and include/exclude globs.",
      "$ref": "#/$defs/WorkspaceSpec"
    }
  },
  "required": [
    "id",
    "task",
    "lane",
    "workspace",
    "context",
    "policy",
    "requirements",
    "config"
  ],
  "$defs": {
    "Capability": {
      "description": "A discrete feature that a backend may support (tools, hooks, MCP, etc.).\n\n# Examples\n\n```\nuse abp_core::{Capability, SupportLevel, CapabilityManifest};\n\nlet mut manifest = CapabilityManifest::new();\nmanifest.insert(Capability::ToolRead, SupportLevel::Native);\nmanifest.insert(Capability::Streaming, SupportLevel::Emulated);\n\nassert!(manifest.contains_key(&Capability::ToolRead));\n```",
      "oneOf": [
        {
          "description": "Real-time token streaming support.",
          "type": "string",
          "const": "streaming"
        },
        {
          "description": "Read file contents from the workspace.",
          "type": "string",
          "const": "tool_read"
        },
        {
          "description": "Write new files to the workspace.",
          "type": "string",
          "const": "tool_write"
        },
        {
          "description": "Edit existing files in the workspace.",
          "type": "string",
          "const": "tool_edit"
        },
        {
          "description": "Execute shell commands.",
          "type": "string",
          "const": "tool_bash"
        },
        {
          "description": "Search for files by glob pattern.",
          "type": "string",
          "const": "tool_glob"
        },
        {
          "description": "Search file contents by regex pattern.",
          "type": "string",
          "const": "tool_grep"
        },
        {
          "description": "Perform web searches.",
          "type": "string",
          "const": "tool_web_search"
        },
        {
          "description": "Fetch content from URLs.",
          "type": "string",
          "const": "tool_web_fetch"
        },
        {
          "description": "Prompt the user for input.",
          "type": "string",
          "const": "tool_ask_user"
        },
        {
          "description": "Pre-tool-use governance hook.",
          "type": "string",
          "const": "hooks_pre_tool_use"
        },
        {
          "description": "Post-tool-use governance hook.",
          "type": "string",
          "const": "hooks_post_tool_use"
        },
        {
          "description": "Resume a previous session.",
          "type": "string",
          "const": "session_resume"
        },
        {
          "description": "Fork a session into parallel branches.",
          "type": "string",
          "const": "session_fork"
        },
        {
          "description": "Save and restore execution checkpoints.",
          "type": "string",
          "const": "checkpointing"
        },
        {
          "description": "Structured output via JSON Schema.",
          "type": "string",
          "const": "structured_output_json_schema"
        },
        {
          "description": "Act as an MCP client.",
          "type": "string",
          "const": "mcp_client"
        },
        {
          "description": "Act as an MCP server.",
          "type": "string",
          "const": "mcp_server"
        },
        {
          "description": "Generic tool-use capability (function calling).",
          "type": "string",
          "const": "tool_use"
        },
        {
          "description": "Extended thinking / chain-of-thought reasoning.",
          "type": "string",
          "const": "extended_thinking"
        },
        {
          "description": "Accept images as input.",
          "type": "string",
          "const": "image_input"
        },
        {
          "description": "Accept PDF documents as input.",
          "type": "string",
          "const": "pdf_input"
        },
        {
          "description": "Execute code in a sandboxed environment.",
          "type": "string",
          "const": "code_execution"
        },
        {
          "description": "Return log-probabilities for generated tokens.",
          "type": "string",
          "const": "logprobs"
        },
        {
          "description": "Deterministic output via seed parameter.",
          "type": "string",
          "const": "seed_determinism"
        },
        {
          "description": "Support custom stop sequences.",
          "type": "string",
          "const": "stop_sequences"
        },
        {
          "description": "Legacy function-calling style (distinct from tool_use in some SDKs).",
          "type": "string",
          "const": "function_calling"
        },
        {
          "description": "Accept images as input (vision models).",
          "type": "string",
          "const": "vision"
        },
        {
          "description": "Accept audio as input.",
          "type": "string",
          "const": "audio"
        },
        {
          "description": "Constrain output to valid JSON.",
          "type": "string",
          "const": "json_mode"
        },
        {
          "description": "Support system-level prompt messages.",
          "type": "string",
          "const": "system_message"
        },
        {
          "description": "Temperature sampling parameter.",
          "type": "string",
          "const": "temperature"
        },
        {
          "description": "Top-p (nucleus) sampling parameter.",
          "type": "string",
          "const": "top_p"
        },
        {
          "description": "Top-k sampling parameter.",
          "type": "string",
          "const": "top_k"
        },
        {
          "description": "Maximum token limit parameter.",
          "type": "string",
          "const": "max_tokens"
        },
        {
          "description": "Frequency penalty parameter.",
          "type": "string",
          "const": "frequency_penalty"
        },
        {
          "description": "Presence penalty parameter.",
          "type": "string",
          "const": "presence_penalty"
        },
        {
          "description": "Prompt caching / cache-control hints.",
          "type": "string",
          "const": "cache_control"
        },
        {
          "description": "Batch request API support.",
          "type": "string",
          "const": "batch_mode"
        },
        {
          "description": "Text embedding generation.",
          "type": "string",
          "const": "embeddings"
        },
        {
          "description": "Image generation (e.g. DALL-E).",
          "type": "string",
          "const": "image_generation"
        }
      ]
    },
    "CapabilityRequirement": {
      "description": "A single capability + minimum support level pair.",
      "type": "object",
      "properties": {
        "capability": {
          "description": "The capability being required.",
          "$ref": "#/$defs/Capability"
        },
        "min_support": {
          "description": "Minimum acceptable support level.",
          "$ref": "#/$defs/MinSupport"
        }
      },
      "required": [
        "capability",
        "min_support"
      ]
    },
    "CapabilityRequirements": {
      "description": "Set of capabilities the work order requires from its backend.",
      "type": "object",
      "properties": {
        "required": {
          "description": "List of capability/support-level pairs the backend must satisfy.",
          "type": "array",
          "items": {
            "$ref": "#/$defs/CapabilityRequirement"
          }
        }
      },
      "required": [
        "required"
      ]
    },
    "ContextPacket": {
      "description": "Pre-loaded context files and snippets attached to a [`WorkOrder`].",
      "type": "object",
      "properties": {
        "files": {
          "description": "Explicit file paths to include (relative to workspace root).",
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "snippets": {
          "description": "Optional snippets (for UIs or preloaded context).",
          "type": "array",
          "items": {
            "$ref": "#/$defs/ContextSnippet"
          }
        }
      },
      "required": [
        "files",
        "snippets"
      ]
    },
    "ContextSnippet": {
      "description": "A named text fragment included in [`ContextPacket`].",
      "type": "object",
      "properties": {
        "content": {
          "description": "The snippet text.",
          "type": "string"
        },
        "name": {
          "description": "Human-readable label for the snippet.",
          "type": "string"
        }
      },
      "required": [
        "name",
        "content"
      ]
    },
    "ExecutionLane": {
      "description": "Strategy for how the agent produces its output.",
      "oneOf": [
        {
          "description": "Agent proposes a patch/diff. No direct mutation of the user's repo.",
          "type": "string",
          "const": "patch_first"
        },
        {
          "description": "Agent can mutate a workspace (often a staged worktree).",
          "type": "string",
          "const": "workspace_first"
        }
      ]
    },
    "MinSupport": {
      "description": "Minimum acceptable [`SupportLevel`] threshold.",
      "oneOf": [
        {
          "description": "Only accept native support.",
          "type": "string",
          "const": "native"
        },
        {
          "description": "Native or emulated is acceptable.",
          "type": "string",
          "const": "emulated"
        },
        {
          "description": "Any support level is acceptable (including unsupported).",
          "type": "string",
          "const": "any"
        }
      ]
    },
    "PolicyProfile": {
      "description": "Security policy: tool allow/deny lists, path restrictions, network rules.\n\nAn empty profile permits everything (no restrictions).",
      "type": "object",
      "properties": {
        "allow_network": {
          "description": "Network allowlist (domains or patterns).",
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "allowed_tools": {
          "description": "Tool allowlist. Empty means \"backend default\".",
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "deny_network": {
          "description": "Network denylist (domains or patterns).",
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "deny_read": {
          "description": "Deny reading paths matching any of these globs.",
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "deny_write": {
          "description": "Deny writing/editing paths matching any of these globs.",
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "disallowed_tools": {
          "description": "Tool denylist.",
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "require_approval_for": {
          "description": "Require explicit approval for these tools.",
          "type": "array",
          "items": {
            "type": "string"
          }
        }
      },
      "required": [
        "allowed_tools",
        "disallowed_tools",
        "deny_read",
        "deny_write",
        "allow_network",
        "deny_network",
        "require_approval_for"
      ]
    },
    "RuntimeConfig": {
      "description": "Runtime-level knobs: model selection, vendor flags, budget caps, etc.",
      "type": "object",
      "properties": {
        "env": {
          "description": "Environment variables for the runtime.",
          "type": "object",
          "additionalProperties": {
            "type": "string"
          }
        },
        "max_budget_usd": {
          "description": "Hard cap on cost (best-effort).",
          "type": [
            "number",
            "null"
          ],
          "format": "double"
        },
        "max_turns": {
          "description": "Hard cap on turns/iterations (best-effort).",
          "type": [
            "integer",
            "null"
          ],
          "format": "uint32",
          "minimum": 0
        },
        "model": {
          "description": "Preferred backend/model identifier.",
          "type": [
            "string",
            "null"
          ]
        },
        "vendor": {
          "description": "Optional vendor-specific flags (passed through adapters).",
          "type": "object",
          "additionalProperties": true
        }
      },
      "required": [
        "vendor",
        "env"
      ]
    },
    "WorkspaceMode": {
      "description": "How the runtime treats the workspace before handing it to a backend.",
      "oneOf": [
        {
          "description": "Use the workspace as-is.",
          "type": "string",
          "const": "pass_through"
        },
        {
          "description": "Create a sanitized copy (or worktree) before running tools.",
          "type": "string",
          "const": "staged"
        }
      ]
    },
    "WorkspaceSpec": {
      "description": "Describes the workspace root, staging mode, and include/exclude globs.",
      "type": "object",
      "properties": {
        "exclude": {
          "description": "Optional exclude globs (evaluated relative to root).",
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "include": {
          "description": "Optional include globs (evaluated relative to root).",
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "mode": {
          "description": "How the runtime should treat the workspace.",
          "$ref": "#/$defs/WorkspaceMode"
        },
        "root": {
          "description": "Root folder for the step.",
          "type": "string"
        }
      },
      "required": [
        "root",
        "mode",
        "include",
        "exclude"
      ]
    }
  }
}
